# playccpp

./: .gitignore  CMakeLists.txt  README.md  msvcsetup.ps1
multiplay/: CMakeLists.txt  CMakePresets.json  vcpkg.json
multiplay/src/curl_doh/: CMakeLists.txt  main.cpp
multiplay/src/hello_play/: main.cpp
src/: CMakeLists.txt
src/curl_doh/: main.cpp
src/hello_play/: CMakeLists.txt
webkitcurl/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
webkitcurl/triplets/: x64-windows-webkit.cmake
